[package]
edition = "2021"
name = "clinews"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-edit = "0.10.4"
crossterm = "0.23.0"
dotenv = "0.15.0"
newsapi = {path = "./newsapi", features = ["async"]}
termimad = "0.20.2"
tokio = {version = "1.21.1", features = ["full"]}
